--- a/index.html
+++ b/index.html
@@ -163,12 +163,24 @@
                 <th>Associated Project</th>
             </tr>
             <tr>
+                <td>INFOSEC, NIST Risk Management Framework, Security Audits, NIST Cybersecurity Framework, Incident Response Playbooks, CISSP, CIA triad</td>
+                <td><a href="Conduct an Audit.html">Conduct an Audit 📋</a></td>
+            </tr>
+            <tr>
+                <td>TCP/IP model, Network Architecture, Network Communication, Security Hardening, Network Security, Cloud Networks</td>
+                <td><a href="Assets & Threats & Vulnerabilities.html">Network Security 🌐</a></td>
+            </tr>
+            <tr>
                 <td>Command-line Interface, SQL, Linux, Bash</td>
                 <td><a href="Linux & SQL.html">Linux & SQL 🐧</a></td>
             </tr>
             <tr>
                 <td>Authentication,  Vulnerability assessment, Cryptography, Asset Classification, Threat Modelling Analysis</td>
-                <td><a href="Assets & Threats & Vulnerabilities.html">Assets & Threats & Vulnerabilities 🔎</a></td>
+                <td><a href="Assets & Threats & Vulnerabilities.html">Assets & Threats & Vulnerabilities ⚠️</a></td>
+            </tr>
+            <tr>
+                <td>Incident Lifecycle, Incident Journal</td>
+                <td><a href="Detection and Response.html">Detection and Response 🚨</a></td>
             </tr>
             <!-- Add more rows for other skills -->
         </table>
