--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </tr>
             <tr>
                 <td>TCP/IP model, Network Architecture, Network Communication, Security Hardening, Network Security, Cloud Networks</td>
-                <td><a href="Assets & Threats & Vulnerabilities.html">Network Security 🌐</a></td>
+                <td><a href="Network Security.html">Network Security 🌐</a></td>
             </tr>
             <tr>
                 <td>Command-line Interface, SQL, Linux, Bash</td>
