--- a/Network Security.html
+++ b/Network Security.html
@@ -128,6 +128,7 @@
         <ul class="projects">
             <li><a href="https://www.canva.com/design/DAGIW69BPcA/Nxu_N42byyLR2AjLlgQj_A/view">Analyze network layer communication</a></li>
             <li><a href="https://www.canva.com/design/DAGIal94TYE/dS9E7l3W8EEiUlEfNJtqsw/view">Analyze network attacks</a></li>
+            <li><a href="https://www.canva.com/design/DAGIfqtGXYE/swQqH1eTvavYZeyr5o3Ttw/view">Analysis of network hardening</a></li>
         </ul>
     </div>
 </body>
