Update Linux & SQL.html

--- a/Linux & SQL.html
+++ b/Linux & SQL.html
@@ -132,7 +132,7 @@
             <li><a href="https://www.canva.com/design/DAGIZoc4y84/1BBtFkO3DRFUep0homFqWQ/view">Manage file content in Bash</a></li>
             <li><a href="https://www.canva.com/design/DAGIZlL41lY/p313d9590sszsN5wDhQjyw/view">Add and manage users with Linux commands</a></li>
             <li><a href="https://www.canva.com/design/DAGIZ9shWrY/CR8ZdpyjkOPTlxrOjCMYDw/view">Get help in the command line</a></li>
-            <li><a href="https://www.canva.com/design/DAGIlikcMMc/04GDSa2RYYtoeVHNmuLyOw/view">Get help in the command line</a></li>
+            <li><a href="https://www.canva.com/design/DAGIlikcMMc/04GDSa2RYYtoeVHNmuLyOw/view">Perform a SQL query</a></li>
         </ul>
     </div>
 </body>
