Update Linux & SQL.html

--- a/Linux & SQL.html
+++ b/Linux & SQL.html
@@ -133,6 +133,7 @@
             <li><a href="https://www.canva.com/design/DAGIZlL41lY/p313d9590sszsN5wDhQjyw/view">Add and manage users with Linux commands</a></li>
             <li><a href="https://www.canva.com/design/DAGIZ9shWrY/CR8ZdpyjkOPTlxrOjCMYDw/view">Get help in the command line</a></li>
             <li><a href="https://www.canva.com/design/DAGIlikcMMc/04GDSa2RYYtoeVHNmuLyOw/view">Perform a SQL query</a></li>
+            <li><a href="https://www.canva.com/design/DAGIl6IUPJ4/A0REqEqGa-bcJNXaTXk42w/view">Filter a SQL query</a></li>
         </ul>
     </div>
 </body>
