--- a/Network Security.html
+++ b/Network Security.html
@@ -129,6 +129,7 @@
             <li><a href="https://www.canva.com/design/DAGIW69BPcA/Nxu_N42byyLR2AjLlgQj_A/view">Analyze network layer communication</a></li>
             <li><a href="https://www.canva.com/design/DAGIal94TYE/dS9E7l3W8EEiUlEfNJtqsw/view">Analyze network attacks</a></li>
             <li><a href="https://www.canva.com/design/DAGIfqtGXYE/swQqH1eTvavYZeyr5o3Ttw/view">Analysis of network hardening</a></li>
+            <li><a href="https://www.canva.com/design/DAGIl_XBT2c/u-ujB1RmuZPHVPOq44yAww/view">Apply OS hardening techniques</a></li>
         </ul>
     </div>
 </body>
