Update Detection and Response.html

--- a/Detection and Response.html
+++ b/Detection and Response.html
@@ -120,7 +120,7 @@
             <a href="index.html">Home</a>  
         </div>
         <h2>Overview</h2>
-        <p>Welcome to the Security Audit section of my portfolio! Here, you'll see my experience in conducting thorough security audits. The projects show how I assess and improve an organization's security using industry-standard frameworks and controls. You'll find examples of how I identify and fix vulnerabilities, reduce risks, and protect sensitive information.</p>
+        <p>Welcome to the Detection and Response section of my portfolio! Here, you'll find projects showcasing my experience in investigating and analyzing cybersecurity incidents. These projects demonstrate my skills in identifying the root cause of security events, understanding the techniques attackers use, and recommending effective solutions to prevent future breaches. </p>
     </div>
 
     <div class="projects-container">
