Update Linux & SQL.html

--- a/Linux & SQL.html
+++ b/Linux & SQL.html
@@ -120,9 +120,7 @@
             <a href="index.html">Home</a>  
         </div>
         <h2>Overview</h2>
-        <p>
-            In the Google Cybersecurity course, I had the opportunity to learn the fundamentals of Linux commands through the Bash shell. This involved navigating and managing files, understanding file permissions, and even working with user accounts and privileges. I also learned how to access resources for additional support when encountering unfamiliar commands. This hands-on experience provided me with a solid foundation in using Linux, a widely-used operating system in the cybersecurity field.
-        </p>
+        <p>Welcome to the Linux and SQL section of my portfolio! Here you can find projects where I put my Linux and SQL skills to work, navigating file systems, managing user accounts, and querying databases to find and analyze important information.</p>
     </div>
 
     <div class="projects-container">
