--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
                 <td>Incident Lifecycle, Incident Journal</td>
                 <td><a href="Detection and Response.html">Detection and Response 🚨</a></td>
             </tr>
+            <tr>
+                <td>Computer Programming, Python Programming, Coding</td>
+                <td><a href="Automation with Python.html">Automation with Python 🚨</a></td>
+            </tr>
             <!-- Add more rows for other skills -->
         </table>
     </div>
