--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </tr>
             <tr>
                 <td>Computer Programming, Python Programming, Coding</td>
-                <td><a href="Automation with Python.html">Automation with Python 🚨</a></td>
+                <td><a href="Automation with Python.html">Automation with Python 🐍</a></td>
             </tr>
             <!-- Add more rows for other skills -->
         </table>
