Update Automation with Python.html

--- a/Automation with Python.html
+++ b/Automation with Python.html
@@ -129,6 +129,7 @@
             <li><a href=https://www.canva.com/design/DAGIrHPPqKY/V0DrwiKnow14kg3q1iaFpA/view>Practice writing Python code</a></li>
             <li><a href=https://www.canva.com/design/DAGIrabCK8s/p-l6BhesLKNXbkTW1omeMg/view>Assign Python variables</a></li>
             <li><a href=https://www.canva.com/design/DAGIrvVroJU/6SxeCBPRoJ9v5uZPkcj5qg/view>Create a conditional statement</a></li>
+            <li><a href=https://www.canva.com/design/DAGIsOltjrI/YDFC4iUUnx2HJo62Q2B1ag/view>Create loops</a></li>
         </ul>
     </div>
 </body>
