Update Automation with Python.html

--- a/Automation with Python.html
+++ b/Automation with Python.html
@@ -130,6 +130,8 @@
             <li><a href=https://www.canva.com/design/DAGIrabCK8s/p-l6BhesLKNXbkTW1omeMg/view>Assign Python variables</a></li>
             <li><a href=https://www.canva.com/design/DAGIrvVroJU/6SxeCBPRoJ9v5uZPkcj5qg/view>Create a conditional statement</a></li>
             <li><a href=https://www.canva.com/design/DAGIsOltjrI/YDFC4iUUnx2HJo62Q2B1ag/view>Create loops</a></li>
+            <li><a href=https://www.canva.com/design/DAGIxqkZs2o/PeCbMJ1UhnsZBdRuW3YKhg/view>Define and call a function</a></li>
+            <li><a href=https://www.canva.com/design/DAGIx1w3XVg/ok1HUcp760Ia-emxrvWjSQ/view>Create more functions</a></li>
         </ul>
     </div>
 </body>
