--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
                 <td>Computer Programming, Python Programming, Coding</td>
                 <td><a href="Automation with Python.html">Automation with Python 🐍</a></td>
             </tr>
+            <tr>
+                <td>Packet Analyzer</td>
+                <td><a href="Automation with Python.html">Tcpdump and Wireshark 🦈</a></td>
+            </tr>
             <!-- Add more rows for other skills -->
         </table>
     </div>
