--- a/Tcpdump and Wireshark.html
+++ b/Tcpdump and Wireshark.html
@@ -126,7 +126,7 @@
     <div class="projects-container">
         <h2>Projects</h2>
         <ul class="projects">
-            <li><a href=https://www.canva.com/design/DAGIyDIavF8/sgtIwQthNm6sxqj1pr4C2A/view>Analyze your first packet with Wireshark</a></li>
+            <li><a href=https://www.canva.com/design/DAGIyDIavF8/sgtIwQthNm6sxqj1pr4C2A/view>Analyze packet with Wireshark</a></li>
         </ul>
     </div>
 </body>
