--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </tr>
             <tr>
                 <td>Packet Analyzer</td>
-                <td><a href="Automation with Python.html">Tcpdump and Wireshark 🦈</a></td>
+                <td><a href="Tcpdump and Wireshark.html">Tcpdump and Wireshark 🦈</a></td>
             </tr>
             <!-- Add more rows for other skills -->
         </table>
