Update Detection and Response.html

--- a/Detection and Response.html
+++ b/Detection and Response.html
@@ -127,6 +127,7 @@
         <h2>Projects</h2>
         <ul class="projects">
             <li><a href="https://www.canva.com/design/DAGIbyFhR_4/g_3VTvw73RkzzUfwM1INqQ/view">Incident handler's journal</a></li>
+            <li><a href="https://www.canva.com/design/DAGI3TDpyKQ/PKfJP_Uk5mzIEhJnwayd1w/view">Use a playbook to respond to a phishing incident</a></li>
         </ul>
     </div>
 </body>
