--- a/index.html
+++ b/index.html
@@ -190,6 +190,10 @@
                 <td>Packet Analyzer</td>
                 <td><a href="Tcpdump and Wireshark.html">Tcpdump and Wireshark 🦈</a></td>
             </tr>
+             <tr>
+                <td>Intrusion Detection System (IDS): Suricata</td>
+                <td><a href="IDS & SIEM.html">IDS & SIEM 🖥️</a></td>
+            </tr>
             <!-- Add more rows for other skills -->
         </table>
     </div>
@@ -245,7 +249,6 @@
             <a href="https://www.credly.com/badges/793c2273-9a78-4df7-8a59-260a39a32307/public_url" target="_blank"><img src="https://img.shields.io/badge/-Google_IT_Support-4285F4?&style=for-the-badge&logo=Google&logoColor=white" alt="Google IT Support"></a>
             <a href="https://www.credly.com/badges/31b59f7f-bb33-4a1f-850b-ceab9559a1ee/public_url" target="_blank"><img src="https://img.shields.io/badge/-Fortinet-EE3124?&style=for-the-badge&logo=Fortinet&logoColor=white" alt="Introduction to the Threat Landscape 2.0"></a>
             <a href="https://www.credly.com/badges/5f2ce453-9007-4beb-9b5a-9dee3ec6b1cf/public_url" target="_blank"><img src="https://img.shields.io/badge/-Armis-002554?&style=for-the-badge&logo=Armis&logoColor=white" alt="Cyber Defense Core"></a>
-
         </div>
     </div>      
     <div class="projects">
