--- a/infographics.html
+++ b/infographics.html
@@ -120,7 +120,7 @@
             <img src="https://lh3.googleusercontent.com/pw/AP1GczO9KuSXKh37Rv2oV9B9I6yNwnOl1ja0QEp5bGqQZ_GcpcVVp9XoUb_2uNiCNOFOIyAfe0PspOhPKdaVzeXxA-mj-K_WbEPC0NLI2cxg6i5n1wt8vhU=w2400" alt="Infographic 3" onclick="openLightbox();changeImage(this.src)">
             <img src="https://lh3.googleusercontent.com/pw/AP1GczPz82AhvrruNBagpjfrb2EpBqbBDhG0Bb9q6qBmMNzgKG2ptJc6MUuIuuuLqI3cjvyBJx1vFMQ-xBWpe0TnvA69WIT07nZotc98q7D7TFpg3JDdNSs=w2400" alt="Infographic 4" onclick="openLightbox();changeImage(this.src)">
             <img src="https://lh3.googleusercontent.com/pw/AP1GczNLrx9314hBuXSukzGKXQFmDiEoMtOyf6gk0yy9y7KaX4G62IQRcdsVcIeTw21yFmDJ96UynbpM64Dlom9xO4NpCJ2P5EtTDHGiN6ldn7zYlQrOk3k=w2400" alt="Infographic 5" onclick="openLightbox();changeImage(this.src)">
-            <img src="https://www.canva.com/design/DAGI4fRMgsI/qmSFMPhdya-60qXo26-DGQ/view" alt="Infographic 6" onclick="openLightbox();changeImage(this.src)">
+            <img src="https://lh3.googleusercontent.com/pw/AP1GczMaulYZPqGirIVCnjKGRPO1oeCidvmRV6fktgttpq1dCgJfDPQye1pjKYoQ635SA6QKlBcKP3jzncBUbg4ME7-yl_U0QMK7065x5PEkwN_QSyxg88E=w2400" alt="Infographic 6" onclick="openLightbox();changeImage(this.src)">
             <!-- Add more thumbnails as needed -->
         </div>
         <a href="index.html" class="home-link">Home</a>
