--- a/infographics.html
+++ b/infographics.html
@@ -128,6 +128,7 @@
             <img src="https://lh3.googleusercontent.com/pw/AP1GczPz82AhvrruNBagpjfrb2EpBqbBDhG0Bb9q6qBmMNzgKG2ptJc6MUuIuuuLqI3cjvyBJx1vFMQ-xBWpe0TnvA69WIT07nZotc98q7D7TFpg3JDdNSs=w2400" alt="Infographic 4" onclick="openLightbox();changeImage(this.src)">
             <img src="https://lh3.googleusercontent.com/pw/AP1GczNLrx9314hBuXSukzGKXQFmDiEoMtOyf6gk0yy9y7KaX4G62IQRcdsVcIeTw21yFmDJ96UynbpM64Dlom9xO4NpCJ2P5EtTDHGiN6ldn7zYlQrOk3k=w2400" alt="Infographic 5" onclick="openLightbox();changeImage(this.src)">
             <img src="https://lh3.googleusercontent.com/pw/AP1GczMaulYZPqGirIVCnjKGRPO1oeCidvmRV6fktgttpq1dCgJfDPQye1pjKYoQ635SA6QKlBcKP3jzncBUbg4ME7-yl_U0QMK7065x5PEkwN_QSyxg88E=w2400" alt="Infographic 6" onclick="openLightbox();changeImage(this.src)">
+            <img src="https://lh3.googleusercontent.com/pw/AP1GczPuAvIkt8D1TW3cwsw8Pc6IrM2k8suBSrZU58DSNw1T0-sEmJG9JlAYIjViuAnP34y8dIkKG4EnqIn5LhQwHRwYZEX-1SUGdnqRM27_wkr6cHucQFk=w2400" alt="Infographic 6" onclick="openLightbox();changeImage(this.src)">
             <!-- Add more thumbnails as needed -->
         </div>
         <a href="index.html" class="home-link">Home</a>
