--- a/infographics.html
+++ b/infographics.html
@@ -129,6 +129,7 @@
             <img src="https://lh3.googleusercontent.com/pw/AP1GczNLrx9314hBuXSukzGKXQFmDiEoMtOyf6gk0yy9y7KaX4G62IQRcdsVcIeTw21yFmDJ96UynbpM64Dlom9xO4NpCJ2P5EtTDHGiN6ldn7zYlQrOk3k=w2400" alt="Infographic 5" onclick="openLightbox();changeImage(this.src)">
             <img src="https://lh3.googleusercontent.com/pw/AP1GczMaulYZPqGirIVCnjKGRPO1oeCidvmRV6fktgttpq1dCgJfDPQye1pjKYoQ635SA6QKlBcKP3jzncBUbg4ME7-yl_U0QMK7065x5PEkwN_QSyxg88E=w2400" alt="Infographic 6" onclick="openLightbox();changeImage(this.src)">
             <img src="https://lh3.googleusercontent.com/pw/AP1GczPuAvIkt8D1TW3cwsw8Pc6IrM2k8suBSrZU58DSNw1T0-sEmJG9JlAYIjViuAnP34y8dIkKG4EnqIn5LhQwHRwYZEX-1SUGdnqRM27_wkr6cHucQFk=w2400" alt="Infographic 6" onclick="openLightbox();changeImage(this.src)">
+            <img src="https://www.canva.com/design/DAGJi_cmdiw/fFcqKqeWAUszxrVwVJVxxA/view" alt="Infographic 6" onclick="openLightbox();changeImage(this.src)">
             <!-- Add more thumbnails as needed -->
         </div>
         <a href="index.html" class="home-link">Home</a>
